--- a/node-api/package.json
+++ b/node-api/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "express": "^4.21.2",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
   }
